[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1.10.2"
tokio-stream = "0.1"
tokio-test = "0.4.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8.5"
pest = "2.7.5"
pest_derive = "2.7.5"
rayon = "1.8"
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8.0", features = ["accelerate"] }
nalgebra = "0.32.3"
ndarray-linalg = "0.16.0"
eqsolver = "0.1.3"
# z3 = { version = "0.12" }
pathfinding = "4.8.0"
